--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,15 @@
-PRIVATE_KEY=
+# Private key for deployment (without 0x prefix)
+# NEVER commit your real private key to version control!
+PRIVATE_KEY=your_private_key_here
+
+# Core Testnet 2 RPC URL (already configured in hardhat.config.js)
+CORE_TESTNET2_RPC_URL=https://rpc.test2.btcs.network
+
+# Core Scan API Key for contract verification (optional)
+CORE_SCAN_API_KEY=your_core_scan_api_key_here
+
+# Gas reporting (set to true to enable)
+REPORT_GAS=false
+
+# Environment
+NODE_ENV=development
