--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,95 @@
-# Dependency directories
+# Dependencies
 node_modules/
-.env
-package-lock.json
-
-# Hardhat artifacts
-artifacts/
-cache/
-typechain-types/
-
-# IDE files
-.vscode/
-.idea/
-*.iml
-*.swp
-*.swo
-
-# Log files
-logs/
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Coverage directory used by tools like istanbul
-coverage/
-coverage.json
+# Production build
+dist/
+build/
 
-# Misc
-.DS_Store
+# Environment variables
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+
+# Hardhat
+cache/
+artifacts/
+deployments/
+typechain/
+typechain-types/
+
+# Compilation artifacts
+*.tsbuildinfo
+
+# Coverage reports
+coverage/
+coverage.json
+
+# Logs
+*.log
+logs/
+
+# Runtime data
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# Dependency directories
+node_modules/
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# Temporary folders
+tmp/
+temp/
+
+# Editor directories and files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Local deployment files
+deployment-*.json
+
+# Hardhat network files
+hardhat-network.json
+
+# Solidity compilation artifacts
+*.sol.js
+*.sol.ts
